# invisible-coalition-partner

./: .env.example  CLAUDE.md  LICENSE  README.md  _volksabstimmungen_constants.py  a_scrape_smartvote_questions.py  b_scrape_smartvote_answers.py  c_generate_smartvote_dataset.py  d_create_smartvote_plots.py  e_smartvote_web_pca.py  f_smartvote_web_model_pca.py  g_smartvote_web_table.py  h_smartvote_web_agreement.py  i_smartvote_statistical_analysis.py  j_smartvote_paper_figures.py  k_scrape_volksabstimmungen.py  k_web_blog.py  l_generate_volksabstimmungen_dataset.py  m_volksabstimmungen_pca.py  n_volksabstimmungen_analysis.py  o_paper_volksabstimmungen_figures.py  p_extended_analysis.py  pyproject.toml
data/: model_families.json
data/answers/: all_model_answers.json  volksabstimmungen_model_answers.json
data/questionnaire/: questionnaire.json
data/volksabstimmungen/: volksabstimmungen.json
paper/: .gitignore  paper.tex  references.bib
results/: README.md
results/paper/: bh_correction.json  cross_instrument_convergence_permutation.json  cross_instrument_convergent_validity.json  cross_instrument_gradient_flip.json  cross_instrument_nein_tendency.json  smartvote_agreement_robustness.json  smartvote_agreement_scores.json  smartvote_bh_correction.json  smartvote_category_profiles.json  smartvote_deep_timeseries.json  smartvote_displacement.json  smartvote_effect_sizes.json  smartvote_geographic_effect.json  smartvote_imputation_sensitivity.json  smartvote_open_vs_closed.json  smartvote_pca_validation.json  smartvote_refusal_rates.json  (+15 more)
(+15 files in other folders)
